2005-08-03  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve): Add a followAliases
	to handle imported classes.

	* kawa/lang/Translator.java (namespaceResolve): Return expressions that
	creates a ClassMethodProc, when appropriate.
	* kawa/standard/Scheme.java (lookupBuiltin): No point at this time
	in handling Symbols with uri starting "class:".
	* kawa/standard/set_b.java (rewriteForm): Optimize (TYPE:MEMBER ...)
	forms using ClassMethodProc rewrite form.

	* kawa/standard/Scheme.java (initScheme): Update field name used
	slot-set!.

2005-08-03  Chris Dean  <ctdean@sokitomi.com>

	* kawa/standard/Scheme.java (initScheme): Define new
	define-private-namespace function.

2005-07-29  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve): If prefix is bound in
	the current environment to a ClassType, add "class:" prefix to name.

2005-07-27  Per Bothner  <per@bothner.com>

	* Makefile.am (set-selected-java-source): New rule - set
	selected-java-source but only if changed.
	(select-java1, select-java2, select-java4, select-java4x, select-java5):
	Use new set-selected-java-source rule, which works with read-only files.

	* Makefile.am (dist-hook): Default is now select-java4.

	* configure.in (AC_INIT): Set version to 1.8beta.
	* build.xml (version.release): Likewise.

2005-07-25  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid-let.java (rewrite): Revert thinko in previous
	change.

2005-07-23  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid-let.java (rewrite):  Push/pop position
	for better error messages.

2005-07-23  Alex Milowski  <alex@milowski.org>

	* kawa/standard/fluid-let.java (rewrite): Handle SyntaxForm.

2005-07-23  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (*print-base*, *print-radix*,
	*print-right-margin*, *print-miser-width*): New fluid variables.

	* kawa/GuiConsole.java (<init>): New shared parameter.
	Use to call InheritingEnvironment's setIndirectDefines.